--- a/product.html
+++ b/product.html
@@ -1,130 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Z4D7LBJCED"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-Z4D7LBJCED');
+</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Awesome Tech Gadgets</title>
+    <title>Cutting-Edge Mobile Phones</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 20px;
-            background-color: #f4f4f4;
-            color: #333;
-            text-align: center;
-        }
-        .container {
-            max-width: 960px;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: #fff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
-        }
-        h1 {
-            color: #007bff;
-            margin-bottom: 30px;
-        }
-        .product-grid {
-            display: flex;
-            justify-content: space-around;
-            flex-wrap: wrap;
-            gap: 20px;
-        }
-        .product-card {
-            background-color: #fff;
-            border: 1px solid #ddd;
-            border-radius: 8px;
-            padding: 20px;
-            width: 300px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            text-align: left;
-        }
-        .product-card img {
-            max-width: 100%;
-            height: auto;
-            border-radius: 4px;
-            margin-bottom: 15px;
-        }
-        .product-card h2 {
-            color: #333;
-            font-size: 1.5em;
-            margin-bottom: 10px;
-        }
-        .product-card p {
-            font-size: 0.9em;
-            color: #666;
-            margin-bottom: 15px;
-        }
-        .product-card .price {
-            font-size: 1.2em;
-            color: #28a745;
-            font-weight: bold;
-            margin-bottom: 20px;
-        }
-        .buy-button {
-            display: inline-block;
-            background-color: #007bff;
-            color: white;
-            padding: 10px 20px;
-            text-align: center;
-            text-decoration: none;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
-        }
-        .buy-button:hover {
-            background-color: #0056b3;
+            font-family: 'Inter', sans-serif;
+            background-color: #f3f4f6; /* Light gray background */
         }
     </style>
 </head>
-<body>
-    <div class="container">
-        <h1>Welcome to Awesome Tech Gadgets!</h1>
-        <p>Discover the latest and greatest in technology.</p>
+<body class="antialiased">
+    <div class="min-h-screen flex items-center justify-center p-4">
+        <div class="container mx-auto bg-white shadow-lg rounded-xl p-8 max-w-4xl">
+            <header class="text-center mb-10">
+                <h1 class="text-5xl font-bold text-indigo-700 mb-4 rounded-lg p-2 animate-pulse">
+                    Discover Our Latest Mobiles!
+                </h1>
+                <p class="text-gray-600 text-lg">Unleash the power of modern technology in your hands.</p>
+            </header>
 
-        <div class="product-grid">
-            <div class="product-card">
-                <img src="https://via.placeholder.com/280x180/007bff/ffffff?text=Smartwatch" alt="Smartwatch">
-                <h2>Super Smartwatch X1</h2>
-                <p>Track your fitness, receive notifications, and stay connected on the go with this sleek smartwatch.</p>
-                <div class="price">$199.99</div>
-                <a href="smartwatch-details.html" class="buy-button">Buy Now</a>
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+                <!-- Product Card 1: Quantum X Pro -->
+                <div class="product-card bg-white border border-gray-200 rounded-lg p-6 shadow-md hover:shadow-xl transition-shadow duration-300 transform hover:-translate-y-1">
+                    <img src="https://placehold.co/300x200/4f46e5/ffffff?text=Quantum+X+Pro" alt="Quantum X Pro Smartphone" class="w-full h-48 object-cover rounded-md mb-6 shadow-sm">
+                    <h2 class="text-2xl font-semibold text-gray-800 mb-2">Quantum X Pro</h2>
+                    <p class="text-gray-600 text-sm mb-4 leading-relaxed">
+                        Experience blazing-fast performance, stunning camera capabilities, and an all-day battery life with the Quantum X Pro.
+                    </p>
+                    <div class="flex items-center justify-between mb-6">
+                        <span class="text-3xl font-bold text-green-600">$999.99</span>
+                        <span class="text-sm text-gray-500 line-through">$1099.99</span>
+                    </div>
+                    <a href="quantum-x-pro-details.html" class="buy-button w-full block bg-indigo-600 text-white py-3 px-6 rounded-lg text-lg font-semibold text-center hover:bg-indigo-700 transition duration-300 ease-in-out transform hover:scale-105 shadow-md">
+                        Buy Now
+                    </a>
+                </div>
+
+                <!-- Product Card 2: Aura Flex -->
+                <div class="product-card bg-white border border-gray-200 rounded-lg p-6 shadow-md hover:shadow-xl transition-shadow duration-300 transform hover:-translate-y-1">
+                    <img src="https://placehold.co/300x200/10b981/ffffff?text=Aura+Flex+Foldable" alt="Aura Flex Foldable Smartphone" class="w-full h-48 object-cover rounded-md mb-6 shadow-sm">
+                    <h2 class="text-2xl font-semibold text-gray-800 mb-2">Aura Flex Foldable</h2>
+                    <p class="text-gray-600 text-sm mb-4 leading-relaxed">
+                        Redefine your mobile experience with the innovative foldable design of the Aura Flex. Compact when closed, expansive when open.
+                    </p>
+                    <div class="flex items-center justify-between mb-6">
+                        <span class="text-3xl font-bold text-green-600">$1299.99</span>
+                        <span class="text-sm text-gray-500 line-through">$1399.99</span>
+                    </div>
+                    <a href="aura-flex-details.html" class="buy-button w-full block bg-indigo-600 text-white py-3 px-6 rounded-lg text-lg font-semibold text-center hover:bg-indigo-700 transition duration-300 ease-in-out transform hover:scale-105 shadow-md">
+                        Buy Now
+                    </a>
+                </div>
             </div>
 
-            <div class="product-card">
-                <img src="https://via.placeholder.com/280x180/28a745/ffffff?text=Noise+Cancelling+Headphones" alt="Noise Cancelling Headphones">
-                <h2>Aura Noise-Cancelling Headphones</h2>
-                <p>Immerse yourself in pure audio with superior noise cancellation and crystal-clear sound quality.</p>
-                <div class="price">$249.99</div>
-                <a href="headphones-details.html" class="buy-button">Buy Now</a>
-            </div>
+            <footer class="text-center text-gray-500 text-sm mt-10 pt-6 border-t border-gray-200">
+                &copy; 2025 MobileMart. All rights reserved.
+            </footer>
         </div>
     </div>
-</body>
-</html>
-How to Use This Code:
-Save the HTML: Copy the code above and save it as an HTML file (e.g., index.html).
-
-Create Product Pages:
-
-Create a file named smartwatch-details.html for the Super Smartwatch X1.
-
-Create a file named headphones-details.html for the Aura Noise-Cancelling Headphones.
-
-You can put any content you like on these pages, such as more detailed product descriptions, specifications, reviews, etc. For example, a very basic smartwatch-details.html could look like this:
-
-HTML
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Smartwatch Details</title>
-</head>
-<body>
-    <h1>Super Smartwatch X1 Details</h1>
-    <p>This is where you'd put all the detailed information about the Super Smartwatch X1.</p>
-    <a href="index.html">Back to Products</a>
 </body>
 </html>
