--- a/product.html
+++ b/product.html
@@ -44,7 +44,7 @@
                         <span class="text-3xl font-bold text-green-600">$999.99</span>
                         <span class="text-sm text-gray-500 line-through">$1099.99</span>
                     </div>
-                    <a href="quantum-x-pro-details.html" class="buy-button w-full block bg-indigo-600 text-white py-3 px-6 rounded-lg text-lg font-semibold text-center hover:bg-indigo-700 transition duration-300 ease-in-out transform hover:scale-105 shadow-md">
+                    <a href="thank you.html" class="buy-button w-full block bg-indigo-600 text-white py-3 px-6 rounded-lg text-lg font-semibold text-center hover:bg-indigo-700 transition duration-300 ease-in-out transform hover:scale-105 shadow-md">
                         Buy Now
                     </a>
                 </div>
@@ -60,7 +60,7 @@
                         <span class="text-3xl font-bold text-green-600">$1299.99</span>
                         <span class="text-sm text-gray-500 line-through">$1399.99</span>
                     </div>
-                    <a href="aura-flex-details.html" class="buy-button w-full block bg-indigo-600 text-white py-3 px-6 rounded-lg text-lg font-semibold text-center hover:bg-indigo-700 transition duration-300 ease-in-out transform hover:scale-105 shadow-md">
+                    <a href="thank you.html" class="buy-button w-full block bg-indigo-600 text-white py-3 px-6 rounded-lg text-lg font-semibold text-center hover:bg-indigo-700 transition duration-300 ease-in-out transform hover:scale-105 shadow-md">
                         Buy Now
                     </a>
                 </div>
